unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__Associate_With_Referenced_Record__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Associate_With_Referenced_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate Activity With Referenced Rec?</label>
    <type>Checkbox</type>
</CustomField>