unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Email_From_Address__c</fullName>
    <label>Email From Address</label>
    <type>Email</type>
</CustomField>