unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__Email_Html_Body__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Email_Html_Body__c</fullName>
    <label>Email Html Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>