unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__Email_Source__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Email_Source__c</fullName>
    <label>Email Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>