unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>