unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>