unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__Email_To_Address_Field__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Email_To_Address_Field__c</fullName>
    <label>Email To Address Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>