unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__Recipient__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Recipient__c</fullName>
    <label>Recipient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>