unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__Schedule__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Schedule__c</fullName>
    <label>Schedule</label>
    <referenceTo>bt_base__SCH_Schedule__c</referenceTo>
    <relationshipLabel>Schedule Actions</relationshipLabel>
    <relationshipName>Schedule_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>