unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__SMS_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__SMS_Attachment_Id__c</fullName>
    <label>SMS Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>