unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__SMS_From_Number__c.field-meta.xml
<CustomField>
    <fullName>bt_base__SMS_From_Number__c</fullName>
    <label>SMS From Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>