unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>bt_base__SMS_Message__c</fullName>
    <label>SMS Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>