unpackaged/main/default/objects/bt_base__SCH_Schedule_Action__c/fields/bt_base__SMS_To_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>bt_base__SMS_To_Number_Field__c</fullName>
    <label>SMS To Number Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>